argocd-managed/unifi/templates/unifi.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: unifi
  name: unifi
spec:
  replicas: 1
  serviceName: unifi
  selector:
    matchLabels:
      app: unifi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: unifi
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      restartPolicy: Always
      containers:
        - name: unifi
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
          image: ghcr.io/linuxserver/unifi-network-application:10.6.106
          imagePullPolicy: Always
          ports:
            # https://help.ui.com/hc/en-us/articles/218506997-UniFi-Network-Required-Ports-Reference
            # Device communication
            - containerPort: 8080
            # Web UI
            - containerPort: 8443
            # Port used for stun
            # - containerPort: 3478
            #   protocol: UDP
            # Port used for syslog capture
            # - containerPort: 5514
            #   protocol: UDP
            # Guest portal HTTP redirection
            # - containerPort: 8880
            # Guest portal HTTPS redirection
            # - containerPort: 8843
            # Unifi mobile speed test
            # - containerPort: 6789
            # Port used for device discovery
            # - containerPort: 10001
            #   protocol: UDP
            # Make application discoverable on L2 network
            # - containerPort: 1900
            #   protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: unifi
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            periodSeconds: 10
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
