argocd-managed/unifi/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  selector:
    app: unifi
  type: ClusterIP
  ports:
    - name: ui
      port: 8443
      targetPort: 8443
    - name: inform
      port: 8080
      targetPort: 8080
